# skoop

./: .gitignore  Makefile  README.md  pom.xml  pyproject.toml
conf/: connections-mte.yaml  example-import.yaml
scripts/: skoop.sh
src/main/python/: skoop.py
src/main/scala/com/ngc/spark/sql/jdbc/: Db2Dialect.scala
src/test/scala/com/ngc/spark/sql/jdbc/: Db2DialectTest.scala
