[tool.poetry]
name = "skoop"
version = "0.2.0"
description = ""
authors = ["Nate Fleming <nate.fleming@databricks.com>"]
readme = "README.md"
packages = [
	{ include = "*", from = "src/main/python" },
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.1"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pyspark = "^3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
